--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -22,3 +22,12 @@
     color: #003580;
     cursor: pointer;
   }
+
+  @media (max-width:1024px) {
+    .footer{
+      width: 90%;
+    }
+    .fLists{
+      gap: .5rem;
+    }
+  }
