--- a/client/src/components/Headerr/Header.css
+++ b/client/src/components/Headerr/Header.css
@@ -41,7 +41,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 2rem;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
     background: rgba(40, 1, 91, 0.986);
     position: relative;
     bottom: -2.5rem;
@@ -128,4 +128,48 @@
     display: flex;
     gap: .5rem;
     align-items: center;
+}
+
+
+@media (max-width:1024px) {
+    .header{
+        font-size: .8rem;
+    }
+    .header-Container{
+        gap: 1rem;
+    }
+    .headerSearch{
+        flex-direction: column;
+        width: 100%;
+        position: static;
+    }
+    .headerSearch-item{
+        /* padding: 0 .35rem; */
+        font-size: 18px;
+        width: 100%;
+    }
+    .search{
+        width:100%;
+    }
+    .options{
+         top: 21rem; 
+    
+        right: 21rem;  
+    }
+    .calenderDate{
+        top: 21rem;
+        right: 15rem; 
+    }
+}
+
+@media (max-width:720px) {
+    .options{
+        top: 21rem; 
+   
+       right: 8rem;  
+   }
+   .calenderDate{
+       top: 21rem;
+       right: 5rem; 
+   }
 }
