--- a/client/src/Pages/Registration/registration.css
+++ b/client/src/Pages/Registration/registration.css
@@ -10,12 +10,10 @@
 
 
 .area{
-    background: #4e54c8;  
+    background: #d85eeb;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
-    height:100vh;
-    
-   
+    height:100%;
 }
 
 .circles{
@@ -161,7 +159,7 @@
   }
 
 
-  .loginButtonr {
+  .loginButtonr{
     border: none;
     padding: 10px ;
     width: 50%;
@@ -173,12 +171,12 @@
     border-radius: 5px;
   }
   
-  .loginButton:disabled{
+  .loginButtonr:disabled{
     background-color: #0071c28c;
     cursor: not-allowed;
   }
 
-  .loginButton:hover{
+  .loginButtonr:hover{
     background-color: black;
     color: bisque;
   }
@@ -207,4 +205,14 @@
 }
 .indi_input label{
     color: rgb(253, 254, 255);
+}
+
+
+
+@media (max-width:1024px) {
+    .registrationContainer {    
+        padding: 1.5rem;
+        width: 100%;
+        gap: 10px;
+      }
 }
