--- a/client/src/Pages/Single Hotel/Hotel.css
+++ b/client/src/Pages/Single Hotel/Hotel.css
@@ -4,6 +4,7 @@ flex-direction: column;
 align-items: center;
 margin-top: 20px;
     justify-content: center;
+
 }
 .hotelWrapper{
     width: 100%;
@@ -11,6 +12,7 @@ margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+   padding: 0 1rem;
     position: relative;
 }
 .imageContainer{
@@ -59,6 +61,7 @@ margin-top: 20px;
     border: none;
     outline: none;
     cursor: pointer;
+    margin-right: 1rem;
 }
 
 .hotelDetails{
@@ -137,8 +140,10 @@ margin-top: 20px;
     align-items: center;
 }
 .sliderWrapper>img{
-    width: 80%;
-    height: 80vh;
+    max-width: 70%;
+    height: auto;
+    margin: 1rem;
+    padding: 1rem;
 }
 .closeSlider{
     position: absolute;
@@ -153,3 +158,4 @@ margin-top: 20px;
     color: aliceblue;
     cursor: pointer;
 }
+
