--- a/client/src/components/Featured/Featured.css
+++ b/client/src/components/Featured/Featured.css
@@ -26,3 +26,19 @@
     bottom: 10px;
     left: 20px;
 }
+
+@media (max-width:1024px) {
+    .featured{
+        width: 100%;
+        margin-top: 4rem;
+        padding: 1rem;
+    }
+    .handleSearch{
+        width: 100%;
+        align-self: center;
+    }
+    .option{
+        width: 100%;
+        font-size: 1rem;
+    }
+}
