--- a/client/src/components/Property/PropertyList.css
+++ b/client/src/components/Property/PropertyList.css
@@ -3,17 +3,16 @@
     max-width: 1024px;
     display: flex;
     gap: 20px;
-    
+    overflow: auto;
 }
 
 .pListItem{
     flex: 1;
     border-radius: 10px;
-    overflow: hidden;
-    cursor: pointer;
+    
 }
 .pListImg{
-    width: 100%;
+   width: 100%;
     height: 150px;
     object-fit: cover;
 }
@@ -24,4 +23,17 @@ h1{
 h2{
     font-size: 16px;
     font-weight: 100;
+}
+
+@media (max-width:1024px) {
+    .pList{      
+        gap: 5px;
+        padding: 0 1rem;
+    }
+    .pListItem{       
+        min-width: 250px;
+        padding: .5rem;
+        gap: 5px;        
+            }
+       
 }
