--- a/client/src/components/favProperties/FavProperty.css
+++ b/client/src/components/favProperties/FavProperty.css
@@ -14,6 +14,7 @@
 .fpImg{
     width: 100%;
     height: 200px;
+   
 }
 .fpName{
     font-weight: bold;
@@ -38,4 +39,15 @@
     padding: 5px;
     background-color: rgba(51, 0, 255, 0.479);
   
+}
+
+@media (max-width:1024px) {
+    .fp{
+        padding: 10px;  
+        gap: 10px;
+        overflow-x: scroll;
+       }
+    .fpImg{
+        min-width: 250px;
+    }   
 }
