--- a/client/src/components/Headerr/Header.css
+++ b/client/src/components/Headerr/Header.css
@@ -1,175 +1,171 @@
-.header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  background: rgb(183, 0, 255);
+  color: antiquewhite;
+  width: 100%;
+  /* height: 50vh; */
+  padding: 2rem;
+  position: relative;
+}
+.list-mode {
+  max-height: 25vh;
+}
+.header-Container {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.headerList-Item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: larger;
+}
+.dis {
+  pointer-events: none;
+}
+.active {
+  border: 1px solid white;
+  padding: 0.5rem;
+  border-radius: 20px;
+}
+
+.headerSearch {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 2rem;
+  border: 2px solid rgb(255, 255, 255);
+  background: rgba(40, 1, 91, 0.986);
+  position: relative;
+  bottom: -4.5rem;
+}
+
+.headerSearch-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.search {
+  outline: none;
+  border: 0ch;
+  border-radius: 10px;
+  padding: 1rem;
+  min-width: 25rem;
+}
+
+.headerSearch-item svg {
+  font-size: larger;
+}
+
+.handleSearch {
+  cursor: pointer;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding: 1rem;
+  background: rgb(255, 0, 119);
+  color: aliceblue;
+}
+.handleSearch:hover {
+  background-color: black;
+  color: antiquewhite;
+}
+.calenderDate {
+  position: absolute;
+  top: 4.25rem;
+  right: 11rem;
+  z-index: 5;
+}
+
+.options {
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+  background: rgb(255, 255, 255);
+  color: black;
+  position: absolute;
+  border: 1px solid black;
+  top: 4.25rem;
+  right: 4rem;
+}
+
+.option-items {
+  width: 100%;
+  min-width: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.option-items button {
+  cursor: pointer;
+  padding: 0.25rem;
+  border: 1px solid blue;
+  height: 20px;
+  width: 20px;
+}
+.option-items button:disabled {
+  cursor: not-allowed;
+}
+.option-items-group {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+@media (max-width: 1024px) {
+  .header {
+    font-size: 0.8rem;
+  }
+  .header-Container {
     gap: 1rem;
-    background: rgb(183, 0, 255);
-    color: antiquewhite;
-    width: 100%;
-    height: 50vh;
-    padding: 2rem ;
-    position: relative;
-}
-.list-mode{
-    max-height: 25vh ;
-}
-.header-Container{
-    display: flex;
-    gap: 2rem;
-    justify-content: center;
-}
-
-.headerList-Item{
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    font-size: larger;
-  
-}
-.dis{
-    pointer-events: none;
-}
-.active{
-    border: 1px solid white;
-    padding: .5rem;
-    border-radius: 20px;
-}
-
-.headerSearch{
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 2rem;
-    border: 2px solid rgb(255, 255, 255);
-    background: rgba(40, 1, 91, 0.986);
-    position: relative;
-    bottom: -2.5rem;
-}
-
-.headerSearch-item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-    cursor: pointer;
-}
-
-.search{
-    outline: none;
-    border: 0ch;
-    border-radius: 10px;
-    padding: 1rem;
-    min-width: 25rem;
-}
-
-
-.headerSearch-item svg{
-    font-size: larger;
-}
-
-.handleSearch{
-    cursor: pointer;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-    padding: 1rem;
-    background: rgb(255, 0, 119);
-    color: aliceblue;
-}
-.handleSearch:hover{
-    background-color: black;
-    color: antiquewhite;
-}
-.calenderDate{
-    position: absolute;
-    top: 4.25rem;
-    right: 11rem;
-    z-index: 5;
-}
-
-.options{
-    z-index: 5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  }
+  .headerSearch {
     flex-direction: column;
-    gap: 2rem;
-    padding: 2rem;
-    background: rgb(255, 255, 255);
-    color: black;
-    position: absolute;
-    border: 1px solid black;
-    top: 4.25rem;
-    right: 4rem;
-}
-
-.option-items{
     width: 100%;
-    min-width: 150px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: .5rem;
+    position: static;
+  }
+  .headerSearch-item {
+    /* padding: 0 .35rem; */
+    font-size: 18px;
+    width: 100%;
+  }
+  .search {
+    width: 100%;
+  }
+  .options {
+    top: 21rem;
+
+    right: 21rem;
+  }
+  .calenderDate {
+    top: 21rem;
+    right: 15rem;
+  }
 }
 
-.option-items button{
-    cursor: pointer;
-    padding: 0.25rem;
-    border: 1px solid blue;
-    height: 20px;
-    width: 20px;
-    
-}
-.option-items button:disabled{
-    cursor: not-allowed;
-}
-.option-items-group{   
-    display: flex;
-    gap: .5rem;
-    align-items: center;
-}
+@media (max-width: 720px) {
+  .options {
+    top: 21rem;
 
-
-@media (max-width:1024px) {
-    .header{
-        font-size: .8rem;
-    }
-    .header-Container{
-        gap: 1rem;
-    }
-    .headerSearch{
-        flex-direction: column;
-        width: 100%;
-        position: static;
-    }
-    .headerSearch-item{
-        /* padding: 0 .35rem; */
-        font-size: 18px;
-        width: 100%;
-    }
-    .search{
-        width:100%;
-    }
-    .options{
-         top: 21rem; 
-    
-        right: 21rem;  
-    }
-    .calenderDate{
-        top: 21rem;
-        right: 15rem; 
-    }
-}
-
-@media (max-width:720px) {
-    .options{
-        top: 21rem; 
-   
-       right: 8rem;  
-   }
-   .calenderDate{
-       top: 21rem;
-       right: 5rem; 
-   }
+    right: 8rem;
+  }
+  .calenderDate {
+    top: 21rem;
+    right: 5rem;
+  }
 }
